{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 191,
  "lineage": "4cc263d0-4926-c2e7-0683-0e1947f5f2aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195275667627:internet-gateway/igw-0dc7b3a4789023dd8",
            "id": "igw-0dc7b3a4789023dd8",
            "owner_id": "195275667627",
            "region": "eu-west-1",
            "tags_all": {
              "Project": "Proximity-Based Service Provider Finder"
            },
            "vpc_id": "vpc-00c9341f0c9628568"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195275667627:route-table/rtb-08cd0abce8e07db12",
            "id": "rtb-08cd0abce8e07db12",
            "owner_id": "195275667627",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc7b3a4789023dd8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Project": "Proximity-Based Service Provider Finder"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c9341f0c9628568"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e5558818333393b",
            "region": "eu-west-1",
            "route_table_id": "rtb-08cd0abce8e07db12",
            "subnet_id": "subnet-06285e7a81896715c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.redshift_subnet_a",
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0046a2d581146b8ac",
            "region": "eu-west-1",
            "route_table_id": "rtb-08cd0abce8e07db12",
            "subnet_id": "subnet-0b5dd459af4a097e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.redshift_subnet_b",
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redshift_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195275667627:security-group/sg-03dc96d0a4c39d02c",
            "description": "Security group for Redshift cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dc96d0a4c39d02c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "prox-redshift-sg",
            "name_prefix": "",
            "owner_id": "195275667627",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "Proximity-Based Service Provider Finder"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c9341f0c9628568"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195275667627:subnet/subnet-06285e7a81896715c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06285e7a81896715c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195275667627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags_all": {
              "Project": "Proximity-Based Service Provider Finder"
            },
            "vpc_id": "vpc-00c9341f0c9628568"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195275667627:subnet/subnet-0b5dd459af4a097e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5dd459af4a097e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195275667627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags_all": {
              "Project": "Proximity-Based Service Provider Finder"
            },
            "vpc_id": "vpc-00c9341f0c9628568"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redshift_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195275667627:vpc/vpc-00c9341f0c9628568",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e1f04cb06dfbc13",
            "default_route_table_id": "rtb-01a39cf0628d2748d",
            "default_security_group_id": "sg-0f35553a76a51d848",
            "dhcp_options_id": "dopt-073123194c2e4b23e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c9341f0c9628568",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a39cf0628d2748d",
            "owner_id": "195275667627",
            "region": "eu-west-1",
            "tags": {
              "Name": "redshift-vpc"
            },
            "tags_all": {
              "Name": "redshift-vpc",
              "Project": "Proximity-Based Service Provider Finder"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}